// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main reducer should REMOVE_USER_DATA 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": "",
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": "",
  "searchParam": "",
  "secretKey": "",
  "score": "",
  "avatar": "",
}
`;

exports[`main reducer should UPDATE_CONNECTIONS 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "todo...",
      "connectionDate": 1532537998586,
      "name": "Test User",
      "publicKey": Array [],
      "score": "85.1",
    },
  ],
  "groupsCount": "",
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": "",
  "searchParam": "",
  "secretKey": "",
  "score": "",
  "avatar": "",
}
`;

exports[`main reducer should UPDATE_USER_DATA 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": "",
  "nameornym": "Test User",
  "nearbyPeople": Array [],
  "publicKey": Array [],
  "publicKey2": "",
  "searchParam": "",
  "secretKey": Array [],
  "score": "",
  "avatar": "todo...",
}
`;

exports[`main reducer should return the initial state 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": "",
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": "",
  "searchParam": "",
  "secretKey": "",
  "score": "",
  "avatar": "",
}
`;

exports[`main reducer should set PUBLICKEY2 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": "",
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": Array [],
  "searchParam": "",
  "secretKey": "",
  "score": "",
  "avatar": "",
}
`;

exports[`main reducer should update GROUPS_COUNT 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": 64,
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": "",
  "searchParam": "",
  "secretKey": "",
  "score": "",
  "avatar": "",
}
`;

exports[`main reducer should update SEARCH_PARAM 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": "",
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": "",
  "searchParam": "hi john",
  "secretKey": "",
  "score": "",
  "avatar": "",
}
`;

exports[`main reducer should update USER_SCORE 1`] = `
Object {
  "connections": Array [
    Object {
      "avatar": "",
      "connectionDate": "",
      "name": "",
      "publicKey": Array [],
      "score": "",
    },
  ],
  "groupsCount": "",
  "nameornym": "",
  "nearbyPeople": Array [],
  "publicKey": "",
  "publicKey2": "",
  "searchParam": "",
  "secretKey": "",
  "score": "99.9",
  "avatar": "",
}
`;
